tests/ui/consts/issue-79690.64bit.stderr
error[E0080]: constructing invalid value at .1: encountered a dangling reference (going beyond the bounds of its allocation)
  --> $DIR/issue-79690.rs:30:1
   |
LL | const G: Fat = unsafe { Transmute { t: FOO }.u };
   | ^^^^^^^^^^^^ it is undefined behavior to use this value
   |
   = note: The rules on what exactly is undefined behavior aren't clear, so this check might be overzealous. Please open an issue on the rustc repository if you believe it should not be considered undefined behavior.
   = note: the raw bytes of the constant (size: 16, align: 8) {
               ╾ALLOC0<imm>╼ ╾ALLOC1╼ │ ╾──────╼╾──────╼
           }

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
